environments/prod/ingress-artifactory.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/enable-websocket: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: npm.gingersociety.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: verdaccio-service
                port:
                  number: 80

    - host: docker-ui.gingersociety.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-ui
                port:
                  number: 80

    - host: pip.gingersociety.org
      http:
        paths:
          - path: /simple
            pathType: Prefix
            backend:
              service:
                name: pypiserver
                port:
                  number: 80
          - path: /ftp
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  number: 80
