environments/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/enable-websocket: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: api.gingersociety.org
      http:
        paths:
          - path: /example
            pathType: Prefix
            backend:
              service:
                name: example-service
                port:
                  number: 80

          - path: /iam
            pathType: Prefix
            backend:
              service:
                name: iam-service-api-service
                port:
                  number: 80

          - path: /metadata
            pathType: Prefix
            backend:
              service:
                name: metadata-service-api-service
                port:
                  number: 80
          
          - path: /kube
            pathType: Prefix
            backend:
              service:
                name: ginger-kube-service
                port:
                  number: 80

          - path: /iam-admin
            pathType: Prefix
            backend:
              service:
                name: iam-admin-service-api-service
                port:
                  number: 80

          - path: /notification
            pathType: Prefix
            backend:
              service:
                name: notification-service-service
                port:
                  number: 80

    - host: iam.gingersociety.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iam-frontend-service
                port:
                  number: 80

    - host: iam-admin.gingersociety.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iam-admin-frontend-service
                port:
                  number: 80

    - host: pgadmin.gingersociety.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin-pgadmin4
                port:
                  number: 80

    - host: source.gingersociety.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitweb-service
                port:
                  number: 80

    - host: npm.gingersociety.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: verdaccio-service
                port:
                  number: 80

    - host: docker-ui.gingersociety.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-ui
                port:
                  number: 80

    - host: longhorn.gingersociety.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-dashboard-proxy
                port:
                  number: 80

    - host: pip.gingersociety.org
      http:
        paths:
          - path: /simple
            pathType: Prefix
            backend:
              service:
                name: pypiserver
                port:
                  number: 80
          - path: /ftp
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  number: 80

    - host: images.gingersociety.org
      http:
        paths:
          - path: /ftp
            pathType: Prefix
            backend:
              service:
                name: filebrowser-static-images-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static-image-service
                port:
                  number: 80

    - host: tekton.gingersociety.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tekton-dashboard-proxy
                port:
                  number: 9097

    - host: k8-prod-dashboard.gingersociety.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard-auth-proxy
                port:
                  number: 80

    - host: db-compose-test-env.gingersociety.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ginger-db-test-env-service
                port:
                  number: 80

    - host: coder-test-env.gingersociety.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coder-test-service
                port:
                  number: 80

    - host: dev-portal.gingersociety.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-portal-frontend-service
                port:
                  number: 80
